# codewatch

./: Cargo.toml
src/: config.rs  git.rs  index.rs  main.rs  note.rs  parser.rs  scorer.rs
src/commands/: config.rs  init.rs  list.rs  mod.rs  note.rs  report.rs  scan.rs  show.rs  top.rs
