[package]
name = "codewatch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
regex = "1"
anyhow = "1"
walkdir = "2"
ignore = "0.4"        # .gitignore対応
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "cw"
path = "src/main.rs"
